traininglabs/4.4-policy-e2e-workflow-lab/stage2/rogue.yaml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: rogue
  namespace: storefront
  labels:
    app: rogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rogue
  template:
    metadata:
      labels:
        app: rogue
    spec:
      imagePullSecrets:
      - name: tigera-pull-secret
      containers:
      - name: mock-microservice1
        image: quay.io/tigera/peira:v0.2.3
        args:
        - "probe"
        - "microservice1:80"
        ports:
        - containerPort: 9000
      - name: mock-microservice2
        image: quay.io/tigera/peira:v0.2.3
        args:
        - "probe"
        - "--listenPort"
        - "9001"
        - "microservice2:80"
        ports:
        - containerPort: 9001
      - name: mock-frontend
        image: quay.io/tigera/peira:v0.2.3
        args:
        - "probe"
        - "--listenPort"
        - "9002"
        - "frontend:80"
        ports:
        - containerPort: 9002
      - name: mock-backend
        image: quay.io/tigera/peira:v0.2.3
        args:
        - "probe"
        - "--listenPort"
        - "9003"
        - "backend:80"
        ports:
        - containerPort: 9003
      - name: mock-logging
        image: quay.io/tigera/peira:v0.2.3
        args:
        - "probe"
        - "--listenPort"
        - "9004"
        - "logging:80"
        ports:
        - containerPort: 9004
      - name: mock
        image: quay.io/tigera/peira:v0.2.3
        args:
        - "mock"
        - "--resourcePath"
        - "/mocks/rogue-mock.yaml"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: mockconfig
          mountPath: /mocks
      volumes:
      - name: mockconfig
        configMap:
          name: rogue

---

kind: Service
apiVersion: v1
metadata:
  name: rogue
  namespace: storefront
spec:
  selector:
    app: rogue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
