traininglabs/4.4-policy-e2e-workflow-lab/stage2/YaobankL7Policy.yaml
# Copyright (c) 2017 Tigera, Inc. All rights reserved.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: customer
  namespace: yaobank
spec:
  selector: app == 'customer'
  ingress:
    - action: Allow
      http:
        methods: ["GET"]
  egress:
    - action: Allow

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: summary
  namespace: yaobank
spec:
  selector: app == 'summary'
  ingress:
    - action: Allow
      source:
        serviceAccounts:
          names: ["customer"]
  egress:
    - action: Allow

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: database
  namespace: yaobank
spec:
  selector: app == 'database'
  ingress:
    - action: Allow
      source:
        serviceAccounts:
          names: ["summary"]
      http:
         methods: ["GET"]
         paths: 
           - exact: "/v2/keys"
          
  egress:
    - action: Allow

---
