traininglabs/4.4-policy-e2e-workflow-lab/stage2/default-deny-egress-yaobank.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default.default-deny-egress-yaobank
  namespace: yaobank
spec:
  tier: default
  order: 1400
  selector: all()
  egress:
    - action: Deny
      source: {}
      destination: {}
  types:
    - Egress
