traininglabs/4.4-policy-e2e-workflow-lab/stage2/restricted-resource-allow-policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.allow-tigera-restricted-resources
spec:
  tier: security
  order: 199
  selector:  confidentialAccessPermitted == 'true'
  types:
  - Egress
  egress:
  - action: Allow
    protocol: UDP
    source: {}
    destination:
      ports:
      - '53'
  - action: Allow
    destination:
      selector: color == 'red'
